# discorss

./: .gcloudignore  .gitignore  Makefile  README.md  go.mod  go.sum  main.go
cmd/discorss/: main.go
dfeed/: feedList.go  sendFeed.go  sendfeed.go
feed/: sendfeed.go
python/: .gitignore  pyproject.toml
python/src/python/: __main__.py
test/: feed_test.go
