[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Kyohei Uto", email = "im@kyoheiu.dev" }
]
dependencies = [
    "feedparser>=6.0.10",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
